ACP2E-2729: [CLARIFICATION] Feature Request ADA Compliance

--- a/app/design/frontend/Magento/blank/web/css/print.less
+++ b/app/design/frontend/Magento/blank/web/css/print.less
@@ -76,18 +76,18 @@
     p,
     h2,
     h3 {
-        orphans: 3;
-        widows: 3;
+        page-break-inside: avoid;
     }
 
     .block-content {
-        page-break-before: avoid;
+        break-before: avoid;
     }
 
     .block-title,
     h2,
     h3 {
-        page-break-after: avoid;
+        break-after: avoid;
+        page-break-inside: avoid;
     }
 
     .nav-toggle {
