ACP2E-2729: [CLARIFICATION] Feature Request ADA Compliance

--- a/app/design/frontend/Magento/blank/web/css/print.less
+++ b/app/design/frontend/Magento/blank/web/css/print.less
@@ -76,7 +76,7 @@
     p,
     h2,
     h3 {
-        page-break-inside: avoid;
+        break-inside: avoid;
     }
 
     .block-content {
@@ -87,7 +87,7 @@
     h2,
     h3 {
         break-after: avoid;
-        page-break-inside: avoid;
+        break-inside: avoid;
     }
 
     .nav-toggle {
