ACP2E-2729: [CLARIFICATION] Feature Request ADA Compliance

--- a/app/design/frontend/Magento/blank/web/css/print.less
+++ b/app/design/frontend/Magento/blank/web/css/print.less
@@ -3,6 +3,7 @@
  * See COPYING.txt for license details.
  */
 
+//@codingStandardsIgnoreStart
 @import 'source/lib/_lib.less'; // Global lib
 @import 'source/_theme.less'; // Theme overrides
 @import 'source/_variables.less'; // Local theme variables
@@ -27,7 +28,6 @@
         text-shadow: none !important;
     }
 
-    //  Black prints faster:h5bp.com/s
     a,
     a:visited {
         text-decoration: underline !important;
@@ -137,3 +137,4 @@
         display: none !important;
     }
 }
+//@codingStandardsIgnoreEnd
