ACP2E-2729: [CLARIFICATION] Feature Request ADA Compliance

--- a/app/design/frontend/Magento/blank/web/css/print.less
+++ b/app/design/frontend/Magento/blank/web/css/print.less
@@ -3,7 +3,10 @@
  * See COPYING.txt for license details.
  */
 
-//@codingStandardsIgnoreStart
+/**
+ * @codingStandardsIgnoreStart
+ */
+
 @import 'source/lib/_lib.less'; // Global lib
 @import 'source/_theme.less'; // Theme overrides
 @import 'source/_variables.less'; // Local theme variables
@@ -137,4 +140,4 @@
         display: none !important;
     }
 }
-//@codingStandardsIgnoreEnd
+//  @codingStandardsIgnoreEnd
