--- a/app/code/Magento/Vault/view/frontend/templates/token_list.phtml
+++ b/app/code/Magento/Vault/view/frontend/templates/token_list.phtml
@@ -5,6 +5,7 @@
  */
 
 /** @var \Magento\Vault\Block\Customer\AccountTokens $block */
+/** @var $escaper \Magento\Framework\Escaper */
 $tokens = $block->getPaymentTokens();
 ?>
 <?php if (count($tokens) !== 0): ?>
@@ -12,7 +13,7 @@ $tokens = $block->getPaymentTokens();
         <table class="data table table-credit-cards" id="token-list-table">
             <thead>
             <tr>
-                <th scope="col" class="col"><?= $block->escapeHtml(__('Account')) ?></th>
+                <th scope="col" class="col"><?= $escaper->escapeHtml(__('Account')) ?></th>
                 <th scope="col" class="col actions">&nbsp;</th>
             </tr>
             </thead>
