Accessibility: WAI-ARIA roles nesting wrong in menu

--- a/app/code/Magento/Theme/view/frontend/templates/html/sections.phtml
+++ b/app/code/Magento/Theme/view/frontend/templates/html/sections.phtml
@@ -34,7 +34,7 @@ $groupCss = $block->getGroupCss();
                 </div>
                 <div class="section-item-content <?= $block->escapeHtmlAttr($groupCss) ?>-item-content"
                      id="<?= $block->escapeHtmlAttr($alias) ?>"
-                     data-role="content">
+                     role="tab">
                     <?= /* @noEscape */ $html ?>
                 </div>
             <?php endforeach;?>
