AC-10528:Fix for Order Invoice Comment

--- a/app/code/Magento/Sales/view/adminhtml/templates/order/view/tab/history.phtml
+++ b/app/code/Magento/Sales/view/adminhtml/templates/order/view/tab/history.phtml
@@ -5,6 +5,7 @@
  */
 
 /** @var \Magento\Sales\Block\Adminhtml\Order\View\Tab\History $block */
+/** @var \Magento\Framework\Escaper $escaper */
 ?>
 <section class="admin__page-section edit-order-comments">
     <ul class="note-list">
@@ -15,18 +16,18 @@
             <span class="note-list-status"><?= /* @noEscape */ $block->getItemTitle($_item) ?></span>
             <?php if ($block->isItemNotified($_item, false)): ?>
                 <span class="note-list-customer">
-                    <?= $block->escapeHtml(__('Customer')) ?>
+                    <?= $escaper->escapeHtml(__('Customer')) ?>
                     <?php if ($block->isCustomerNotificationNotApplicable($_item)): ?>
                         <span class="note-list-customer-notapplicable">
-                            <?= $block->escapeHtml(__('Notification Not Applicable')) ?>
+                            <?= $escaper->escapeHtml(__('Notification Not Applicable')) ?>
                         </span>
                     <?php elseif ($block->isItemNotified($_item)): ?>
                         <span class="note-list-customer-notified">
-                            <?= $block->escapeHtml(__('Notified')) ?>
+                            <?= $escaper->escapeHtml(__('Notified')) ?>
                         </span>
                     <?php else: ?>
                         <span class="note-list-customer-not-notified">
-                            <?= $block->escapeHtml(__('Not Notified')) ?>
+                            <?= $escaper->escapeHtml(__('Not Notified')) ?>
                         </span>
                     <?php endif; ?>
                 </span>
@@ -36,16 +37,16 @@
     </ul>
     <div class="edit-order-comments-block">
         <div class="edit-order-comments-block-title">
-            <?= $block->escapeHtml(__('Notes for this Order')) ?>
+            <?= $escaper->escapeHtml(__('Notes for this Order')) ?>
         </div>
         <?php foreach ($block->getFullHistory() as $_item): ?>
             <?php if ($_comment = $block->getItemComment($_item)): ?>
                 <div class="comments-block-item">
                     <div class="comments-block-item-comment">
-                        <?= /* @noEscape */ $block->escapeHtml($_comment) ?>
+                        <?= /* @noEscape */ $escaper->escapeHtml($_comment) ?>
                     </div>
                     <span class="comments-block-item-date-time">
-                        <?= $block->escapeHtml(__('Comment added')) ?>
+                        <?= $escaper->escapeHtml(__('Comment added')) ?>
                         <?= /* @noEscape */ $block->getItemCreatedAt($_item) ?>
                         <?= /* @noEscape */ $block->getItemCreatedAt($_item, 'time') ?>
                     </span>
