--- a/app/code/Magento/ConfigurableProduct/view/base/templates/product/price/final_price.phtml
+++ b/app/code/Magento/ConfigurableProduct/view/base/templates/product/price/final_price.phtml
@@ -4,6 +4,7 @@
  * See COPYING.txt for license details.
  */
 
+/** @var $escaper \Magento\Framework\Escaper */
 /** @var \Magento\ConfigurableProduct\Pricing\Render\FinalPriceBox $block */
 /** @var \Magento\Framework\Pricing\Price\PriceInterface $priceModel */
 $priceModel = $block->getPriceType('regular_price');
@@ -41,7 +42,7 @@ $block->renderAmount($finalPriceModel->getAmount(), [
 
 <?php if ($block->showMinimalPrice()): ?>
     <?php if ($block->getUseLinkForAsLowAs()):?>
-        <a href="<?= $block->escapeUrl($block->getSaleableItem()->getProductUrl()) ?>" class="minimal-price-link">
+        <a href="<?= $escaper->escapeUrl($block->getSaleableItem()->getProductUrl()) ?>" class="minimal-price-link">
             <?= /* @noEscape */ $block->renderAmountMinimal() ?>
         </a>
     <?php else:?>
