improve shipping or billing address editing

--- a/app/code/Magento/Customer/view/frontend/templates/address/book.phtml
+++ b/app/code/Magento/Customer/view/frontend/templates/address/book.phtml
@@ -20,7 +20,7 @@
                     </address>
                 </div>
                 <div class="box-actions">
-                    <a class="action edit" href="<?= $block->escapeUrl($block->getAddressEditUrl($_pAddsses)) ?>">
+                    <a class="action edit" href="<?= $block->escapeUrl($block->getAddressEditUrl($_pAddsses) . '?billingAddress')?>">
                         <span><?= $block->escapeHtml(__('Change Billing Address')) ?></span>
                     </a>
                 </div>
@@ -45,7 +45,7 @@
                     </address>
                 </div>
                 <div class="box-actions">
-                    <a class="action edit" href="<?= $block->escapeUrl($block->getAddressEditUrl($_pAddsses)) ?>">
+                    <a class="action edit" href="<?= $block->escapeUrl($block->getAddressEditUrl($_pAddsses) . '?shippingAddress') ?>">
                         <span><?= $block->escapeHtml(__('Change Shipping Address')) ?></span>
                     </a>
                 </div>
