--- a/app/code/Magento/Customer/view/frontend/templates/account/dashboard/address.phtml
+++ b/app/code/Magento/Customer/view/frontend/templates/account/dashboard/address.phtml
@@ -22,7 +22,7 @@
                 </address>
             </div>
             <div class="box-actions">
-                <a class="action edit" href="<?= $block->escapeUrl($block->getPrimaryBillingAddressEditUrl()) ?>" data-ui-id="default-billing-edit-link"><span><?= $block->escapeHtml(__('Edit Address')) ?></span></a>
+                <a class="action edit" href="<?= $block->escapeUrl($block->getPrimaryBillingAddressEditUrl() . '?billingAddress') ?>" data-ui-id="default-billing-edit-link"><span><?= $block->escapeHtml(__('Edit Billing Address')) ?></span></a>
             </div>
         </div>
         <div class="box box-shipping-address">
@@ -35,7 +35,7 @@
                 </address>
             </div>
             <div class="box-actions">
-                <a class="action edit" href="<?= $block->escapeUrl($block->getPrimaryShippingAddressEditUrl()) ?>" data-ui-id="default-shipping-edit-link"><span><?= $block->escapeHtml(__('Edit Address')) ?></span></a>
+                <a class="action edit" href="<?= $block->escapeUrl($block->getPrimaryShippingAddressEditUrl() . '?shippingAddress') ?>" data-ui-id="default-shipping-edit-link"><span><?= $block->escapeHtml(__('Edit Shipping Address')) ?></span></a>
             </div>
         </div>
     </div>
