--- a/app/code/Magento/Customer/view/frontend/templates/address/edit.phtml
+++ b/app/code/Magento/Customer/view/frontend/templates/address/edit.phtml
@@ -12,8 +12,8 @@
 $viewModel = $block->getViewModel();
 $regionProvider = $block->getRegionProvider();
 ?>
-<?php $shippingParam = isset($_GET['shippingAddress']); ?>
-<?php $billingParam = isset($_GET['billingAddress']); ?>
+<?php $shippingParam = $block->getRequest()->getParam('shippingAddress') !== null; ?>
+<?php $billingParam = $block->getRequest()->getParam('billingAddress') !== null; ?>
 <?php $_company = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Company::class) ?>
 <?php $_telephone = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Telephone::class) ?>
 <?php $_fax = $block->getLayout()->createBlock(\Magento\Customer\Block\Widget\Fax::class) ?>
