--- a/app/code/Magento/Paypal/view/frontend/web/template/paylater.html
+++ b/app/code/Magento/Paypal/view/frontend/web/template/paylater.html
@@ -15,5 +15,6 @@
         'data-pp-style-text-size': getAttribute('data-pp-style-text-size'),
         'data-pp-style-color': getAttribute('data-pp-style-color'),
         'data-pp-style-ratio': getAttribute('data-pp-style-ratio'),
+        'data-pp-buyercountry': getAttribute('data-pp-buyercountry')
     }" ></div>
 
