ACP2E-3028: Paylater message not showing in PDP for Canadian paypal merchant account

--- a/app/code/Magento/Paypal/view/frontend/web/template/paylater.html
+++ b/app/code/Magento/Paypal/view/frontend/web/template/paylater.html
@@ -15,6 +15,6 @@
         'data-pp-style-text-size': getAttribute('data-pp-style-text-size'),
         'data-pp-style-color': getAttribute('data-pp-style-color'),
         'data-pp-style-ratio': getAttribute('data-pp-style-ratio'),
-        'data-pp-buyercountry': getAttribute('data-pp-buyercountry')
+        'data-pp-buyercountry': buyerCountry
     }" ></div>
 
