--- a/app/design/frontend/Magento/luma/Magento_LayeredNavigation/templates/layer/state.phtml
+++ b/app/design/frontend/Magento/luma/Magento_LayeredNavigation/templates/layer/state.phtml
@@ -10,11 +10,8 @@
 /**
  * Category layered navigation state
  *
- * @var $escaper \Magento\Framework\Escaper
  * @var $block \Magento\LayeredNavigation\Block\Navigation\State
- * @var $viewModel \Magento\LayeredNavigation\ViewModel\Layer\State
  */
-$viewModel = $block->getViewModel();
 ?>
 <?php $_filters = $block->getActiveFilters() ?>
 <?php if (!empty($_filters)): ?>
@@ -23,30 +20,30 @@ $viewModel = $block->getViewModel();
             role="heading"
             aria-level="2"
             data-role="title"
-            data-count="<?= /* @noEscape */ count($_filters) ?>"><?= $escaper->escapeHtml(__('Now Shopping by')) ?></strong>
+            data-count="<?= /* @noEscape */ count($_filters) ?>"><?= $block->escapeHtml(__('Now Shopping by')) ?></strong>
     <ol class="items">
         <?php foreach ($_filters as $_filter): ?>
             <li class="item">
-                <span class="filter-label"><?= $escaper->escapeHtml(__($_filter->getName())) ?></span>
-                <span class="filter-value"><?= $escaper->escapeHtml($viewModel->stripTags($_filter->getLabel())) ?></span>
+                <span class="filter-label"><?= $block->escapeHtml(__($_filter->getName())) ?></span>
+                <span class="filter-value"><?= $block->escapeHtml($block->stripTags($_filter->getLabel())) ?></span>
                 <?php
                 $clearLinkUrl = $_filter->getClearLinkUrl();
-                $currentFilterName = $escaper->escapeHtmlAttr(__($_filter->getName()) . " " . $block->stripTags($_filter->getLabel()));
+                $currentFilterName = $block->escapeHtmlAttr(__($_filter->getName()) . " " . $block->stripTags($_filter->getLabel()));
                 if ($clearLinkUrl):
                     ?>
-                    <a class="action previous" href="<?= $escaper->escapeUrl($_filter->getRemoveUrl()) ?>"
-                       title="<?= $escaper->escapeHtmlAttr(__('Previous')) ?>">
-                        <span><?= $escaper->escapeHtml(__('Previous')) ?></span>
+                    <a class="action previous" href="<?= $block->escapeUrl($_filter->getRemoveUrl()) ?>"
+                       title="<?= $block->escapeHtmlAttr(__('Previous')) ?>">
+                        <span><?= $block->escapeHtml(__('Previous')) ?></span>
                     </a>
                     <a class="action remove"
-                       title="<?= $escaper->escapeHtmlAttr($_filter->getFilter()->getClearLinkText()) ?>"
-                       href="<?= $escaper->escapeUrl($clearLinkUrl) ?>">
-                        <span><?= $escaper->escapeHtml($_filter->getFilter()->getClearLinkText()) ?></span>
+                       title="<?= $block->escapeHtmlAttr($_filter->getFilter()->getClearLinkText()) ?>"
+                       href="<?= $block->escapeUrl($clearLinkUrl) ?>">
+                        <span><?= $block->escapeHtml($_filter->getFilter()->getClearLinkText()) ?></span>
                     </a>
                 <?php else: ?>
-                    <a class="action remove" href="<?= $escaper->escapeUrl($_filter->getRemoveUrl()) ?>"
-                       title="<?= /* @noEscape */ $escaper->escapeHtmlAttr(__('Remove')) . " " . $currentFilterName ?>">
-                        <span><?= $escaper->escapeHtml(__('Remove This Item')) ?></span>
+                    <a class="action remove" href="<?= $block->escapeUrl($_filter->getRemoveUrl()) ?>"
+                       title="<?= /* @noEscape */ $block->escapeHtmlAttr(__('Remove')) . " " . $currentFilterName ?>">
+                        <span><?= $block->escapeHtml(__('Remove This Item')) ?></span>
                     </a>
                 <?php endif; ?>
             </li>
